--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -415,9 +415,6 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-
-
-
       async function loadRewards(userName) {
     const rewardsGrid = document.getElementById("rewards-grid");
     const historyGrid = document.getElementById("history-grid");
@@ -428,16 +425,25 @@ document.querySelectorAll('.footer a').forEach(link => {
         const userHoney = await getUserHoney(userName);
         document.getElementById('honeyBalance').textContent = userHoney;
 
+        // Fetch market rewards
         const marketResponse = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
         const marketData = await marketResponse.json();
         if (!marketResponse.ok) throw new Error(marketData.error || "Failed to fetch market rewards");
         const marketRewards = marketData.rewards || [];
 
+        // Fetch user rewards
         const userRewardsResponse = await fetch(`https://beemazing.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
         const userRewardsData = await userRewardsResponse.json();
-        if (!userRewardsResponse.ok) throw new Error(userRewardsData.error || "Failed to fetch user rewards");
+        if (!userRewardsResponse) throw new Error(userRewardsData.error || "Failed to fetch user rewards");
         const userRewards = (userRewardsData.userRewards || {})[userName] || [];
 
+        // Fetch pending reward requests
+        const pendingResponse = await fetch(`https://beemazing.onrender.com/api/reward-requests?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const pendingData = await pendingResponse.json();
+        if (!pendingResponse.ok) throw new Error(pendingData.error || "Failed to fetch pending reward requests");
+        const pendingRequests = (pendingData.requests || []).filter(req => req.user === userName && req.status === "pending");
+
+        // Build market reward map
         const marketRewardMap = {};
         marketRewards.forEach(reward => {
             marketRewardMap[reward.name] = {
@@ -448,11 +454,16 @@ document.querySelectorAll('.footer a').forEach(link => {
             };
         });
 
+        // Count rewards (userRewards + pendingRequests)
         const rewardCounts = {};
         userRewards.forEach(reward => {
             rewardCounts[reward.name] = (rewardCounts[reward.name] || 0) + 1;
         });
+        pendingRequests.forEach(req => {
+            rewardCounts[req.rewardName] = (rewardCounts[req.rewardName] || 0) + 1;
+        });
 
+        // Filter market rewards
         const filteredRewards = marketRewards.filter(reward => {
             if (!reward.assignedUsers || reward.assignedUsers.length === 0) {
                 return true;
@@ -465,6 +476,7 @@ document.querySelectorAll('.footer a').forEach(link => {
             ...Object.keys(rewardCounts)
         ])];
 
+        // Render rewards
         rewardsGrid.innerHTML = "";
         if (allRewardNames.length === 0) {
             rewardsGrid.innerHTML = "<p class='text-center'>No rewards available in the hive.</p>";
@@ -478,124 +490,87 @@ document.querySelectorAll('.footer a').forEach(link => {
                 const outcomes = marketInfo.outcomes || userRewardInfo.outcomes || [];
                 const isTheKey = rewardName === "The Key";
                 const isDiceChest = rewardType === "dice";
-                const isHoney = rewardType === "Honey";
                 const isFromUserRewardsOnly = !marketRewardMap[rewardName] && userRewardCount > 0;
                 const canAfford = userHoney >= rewardCost;
 
-
-
-
                 const card = document.createElement("div");
-card.className = "reward-card";
-card.dataset.reward = rewardName;
-card.dataset.index = index;
+                card.className = "reward-card";
+                card.dataset.reward = rewardName;
+                card.dataset.index = index;
 
-const safeEncodedOutcomes = encodeURIComponent(btoa(JSON.stringify(outcomes)));
+                const safeEncodedOutcomes = encodeURIComponent(btoa(JSON.stringify(outcomes)));
 
-let buttonContent = '';
-if (userRewardCount > 0 && (isTheKey || isDiceChest)) {
-    buttonContent = `
-        <div class="quantity-circle">${userRewardCount}</div>
-        <button class="mt-2 px-3 py-1 btn-back rounded font-semibold" 
-            onclick="${isTheKey ? 
-                `useTheKey('${userName}', '${rewardName}', 1)` : 
-                `useDiceChest('${userName}', '${rewardName}', '${safeEncodedOutcomes}', 1)`}">
-            Use it
-        </button>
-    `;
-} else {
-    buttonContent = `
-        <button class="mt-2 px-3 py-1 rounded font-semibold ${canAfford ? 'btn-primary' : 'btn-disabled'}" 
-            ${canAfford ? '' : 'disabled'} 
-            onclick="claimReward('${userName}', '${rewardName}', '${rewardType}', ${rewardCost}, '${JSON.stringify(outcomes)}')">Get It</button>
-    `;
-}
+                let buttonContent = '';
+                if (userRewardCount > 0 && (isTheKey || isDiceChest)) {
+                    buttonContent = `
+                        <div class="quantity-circle">${userRewardCount}</div>
+                        <button class="mt-2 px-3 py-1 btn-back rounded font-semibold" 
+                            onclick="${isTheKey ? 
+                                `useTheKey('${userName}', '${rewardName}', 1)` : 
+                                `useDiceChest('${userName}', '${rewardName}', '${safeEncodedOutcomes}', 1)`}">
+                            Use it
+                        </button>
+                    `;
+                } else {
+                    buttonContent = `
+                        <button class="mt-2 px-3 py-1 rounded font-semibold ${canAfford ? 'btn-primary' : 'btn-disabled'}" 
+                            ${canAfford ? '' : 'disabled'} 
+                            onclick="claimReward('${userName}', '${rewardName}', '${rewardType}', ${rewardCost}, '${JSON.stringify(outcomes)}')">Get It</button>
+                    `;
+                }
 
-card.innerHTML = `
-    <span class="purchase-indicator" data-count="${userRewardCount}"></span>
-    <h3 class="text-lg font-semibold">${rewardName}</h3>
-    <p class="text-[var(--text-color)]">Buzz Points: ${rewardCost} 🍯</p>
-    ${buttonContent}
-`;
+                card.innerHTML = `
+                    <span class="purchase-indicator" data-count="${userRewardCount}"></span>
+                    <h3 class="text-lg font-semibold">${rewardName}</h3>
+                    <p class="text-[var(--text-color)]">Buzz Points: ${rewardCost} 🍯</p>
+                    ${buttonContent}
+                `;
 
-rewardsGrid.appendChild(card);
+                rewardsGrid.appendChild(card);
 
-const indicator = card.querySelector('.purchase-indicator');
-indicator.style.display = userRewardCount > 0 ? 'flex' : 'none';
-indicator.textContent = userRewardCount;
-
-
-
-
-
-
+                const indicator = card.querySelector('.purchase-indicator');
+                indicator.style.display = userRewardCount > 0 ? 'flex' : 'none';
+                indicator.textContent = userRewardCount;
             });
         }
 
+        // Load reward history (including pending requests)
+        const historyResponse = await fetch(`https://beemazing.onrender.com/api/reward-history?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const historyData = await historyResponse.json();
+        if (!historyResponse.ok) throw new Error(historyData.error || "Failed to fetch reward history");
+        const rewardHistory = (historyData.rewardHistory || {})[userName] || [];
 
-        
-// Load reward history
-const historyResponse = await fetch(`https://beemazing.onrender.com/api/reward-history?adminEmail=${encodeURIComponent(adminEmail)}`);
-const historyData = await historyResponse.json();
-if (!historyResponse.ok) throw new Error(historyData.error || "Failed to fetch reward history");
-const rewardHistory = (historyData.rewardHistory || {})[userName] || [];
+        // Add pending requests to history
+        const combinedHistory = [
+            ...rewardHistory.map(item => ({
+                rewardName: item.rewardName,
+                rewardCost: item.rewardCost,
+                status: item.status,
+                timestamp: item.timestamp
+            })),
+            ...pendingRequests.map(req => ({
+                rewardName: req.rewardName,
+                rewardCost: req.rewardCost,
+                status: "Pending",
+                timestamp: new Date(req.timestamp).toISOString()
+            }))
+        ];
 
-historyGrid.innerHTML = "";
-if (rewardHistory.length === 0) {
-    historyGrid.innerHTML = "<p class='text-center'>No rewards received yet.</p>";
-} else {
-    const reversedHistory = [...rewardHistory].reverse();
-    reversedHistory.forEach((reward) => {
-        const card = document.createElement("div");
-        card.className = "reward-card";
-        card.innerHTML = `
-            <h3 class="text-lg font-semibold">${reward.rewardName}</h3>
-            <p class="text-[var(--text-color)]">Cost: ${reward.rewardCost} 🍯</p>
-            <p class="text-[var(--text-color)]">Status: ${reward.status}</p>
-            <p class="text-[var(--text-color)]">Date: ${new Date(reward.timestamp).toLocaleString()}</p>
-        `;
-        historyGrid.appendChild(card);
-
-
-
-
-
-
-
-
-let startX = 0;
-let currentX = 0;
-let isSwiping = false;
-
-card.addEventListener("touchstart", (e) => {
-    startX = e.touches[0].clientX;
-    isSwiping = true;
-});
-card.addEventListener("touchmove", (e) => {
-    if (!isSwiping) return;
-    currentX = e.touches[0].clientX;
-    const diffX = startX - currentX;
-    if (diffX > 50) card.classList.add("swiped");
-    else if (diffX < -50) card.classList.remove("swiped");
-});
-card.addEventListener("touchend", () => isSwiping = false);
-card.addEventListener("mousedown", (e) => {
-    startX = e.clientX;
-    isSwiping = true;
-});
-card.addEventListener("mousemove", (e) => {
-    if (!isSwiping) return;
-    currentX = e.clientX;
-    const diffX = startX - currentX;
-    if (diffX > 50) card.classList.add("swiped");
-    else if (diffX < -50) card.classList.remove("swiped");
-});
-card.addEventListener("mouseup", () => isSwiping = false);
-
-
-
-
-
+        historyGrid.innerHTML = "";
+        if (combinedHistory.length === 0) {
+            historyGrid.innerHTML = "<p class='text-center'>No rewards received yet.</p>";
+        } else {
+            const reversedHistory = [...combinedHistory].reverse();
+            reversedHistory.forEach((reward) => {
+                const card = document.createElement("div");
+                card.className = "reward-card";
+                card.innerHTML = `
+                    <h3 class="text-lg font-semibold">${reward.rewardName}</h3>
+                    <p class="text-[var(--text-color)]">Cost: ${reward.rewardCost} 🍯</p>
+                    <p class="text-[var(--text-color)]">Status: ${reward.status}</p>
+                    <p class="text-[var(--text-color)]">Date: ${new Date(reward.timestamp).toLocaleString()}</p>
+                `;
+                historyGrid.appendChild(card);
             });
         }
     } catch (err) {
@@ -611,17 +586,18 @@ card.addEventListener("mouseup", () => isSwiping = false);
 
 
 
+
+
 async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
     try {
         // Fetch user honey balance
         const userHoney = await getUserHoney(userName);
-        console.log(`claimReward: user=${userName}, reward=${rewardName}, userHoney=${userHoney}, cost=${honey}, rewardType=${rewardType}, outcomes=`, outcomes);
         if (userHoney < honey) {
             alert("Not enough Buzz Points to claim this reward!");
             return;
         }
 
-        // Send reward request
+        // Deduct points immediately
         const response = await fetch("https://beemazing.onrender.com/api/reward-request", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
@@ -629,21 +605,20 @@ async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
                 adminEmail,
                 user: userName,
                 rewardName,
-                rewardCost: honey
+                rewardCost: honey,
+                deductPoints: true
             })
         });
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to submit reward request");
 
-        alert("Reward request submitted for approval!");
+        alert("Reward request submitted for approval! Points deducted.");
         loadRewards(userName); // Refresh rewards and history
     } catch (err) {
-        console.error(`Error requesting reward for ${rewardName}:`, err);
+        console.error(`Error requesting ${rewardName}:`, err);
         alert(`Failed to request ${rewardName}: ${err.message}. Please try again or contact support.`);
     }
 }
-
-
 
 
 
