--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -412,7 +412,6 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-
       async function loadRewards(userName) {
     const rewardsGrid = document.getElementById("rewards-grid");
     const historyGrid = document.getElementById("history-grid");
@@ -453,12 +452,11 @@ document.querySelectorAll('.footer a').forEach(link => {
             };
         });
 
-
-// Count only pendingRequests for purchase indicator
-const rewardCounts = {};
-pendingRequests.forEach(req => {
-    rewardCounts[req.rewardName] = (rewardCounts[req.rewardName] || 0) + 1;
-});
+        // Count only pendingRequests for purchase indicator
+        const rewardCounts = {};
+        pendingRequests.forEach(req => {
+            rewardCounts[req.rewardName] = (rewardCounts[req.rewardName] || 0) + 1;
+        });
 
         // Filter market rewards
         const filteredRewards = marketRewards.filter(reward => {
@@ -539,8 +537,10 @@ pendingRequests.forEach(req => {
         if (!historyResponse.ok) throw new Error(historyData.error || "Failed to fetch reward history");
         const rewardHistory = (historyData.rewardHistory || {})[userName] || [];
 
-        // Add pending requests to history
-        const combinedHistory = [
+        // Deduplicate history entries
+        const seenEntries = new Set();
+        const combinedHistory = [];
+        const allHistoryItems = [
             ...rewardHistory.map(item => ({
                 rewardName: item.rewardName,
                 rewardCost: item.rewardCost,
@@ -554,6 +554,14 @@ pendingRequests.forEach(req => {
                 timestamp: new Date(req.timestamp).toISOString()
             }))
         ];
+
+        allHistoryItems.forEach(item => {
+            const key = `${item.rewardName}|${item.timestamp}|${item.status}`;
+            if (!seenEntries.has(key)) {
+                seenEntries.add(key);
+                combinedHistory.push(item);
+            }
+        });
 
         historyGrid.innerHTML = "";
         if (combinedHistory.length === 0) {
@@ -578,7 +586,6 @@ pendingRequests.forEach(req => {
         historyGrid.innerHTML = "<p class='text-center'>Failed to load history. Please try again later.</p>";
     }
 }
-
 
 
 
